infra/cloudformation/CD4PE.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Cloudformation template for building a resource pool for a PE-Compiler

Parameters:
  VPCIdParameter:
    Description: The ID of the VPC to be used. Default is eu-west-1.
    Type: AWS::EC2::VPC::Id
    Default: vpc-b741c3d3

  EC2InstanceTypeParameter:
    Description: Enter m5.large or m5.xlarge. Default is m5.large.
    Type: String
    Default: m5.large
    AllowedValues:
      - m5.large
      - m5.xlarge

  EC2ImageIdParameter:
    Description: Image Id to be used to create the EC2.  Default is 47b Centos8 in eu-west-1.
    Type: AWS::EC2::Image::Id
    Default: ami-090b347d44e58c47b
    AllowedValues:
      - ami-090b347d44e58c47b
      - ami-0d37cf4488e003cfb

  EC2KeyNameParameter:
    Description: Key Pair used when creating the image
    Type: String
    Default: chris.allen-SSH

  UniqueParameter:
    Description: Unique reference for this CF Stack to identify resources
    Type: String

  TagEmailParameter:
    Description: Email address for tracking the resource
    Type: String
    Default: chris.allen@puppet.com

  TagLifetimeParameter:
    Description: Duration of the instance
    Type: String
    Default: 90d

  TagTeamParameter:
    Description: The team to which the resource belongs
    Type: String
    Default: PSE

Resources:

  CD4PESG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: The SG for the Puppet Compiler
      GroupName: !Sub CD4PE${UniqueParameter}SG
      VpcId:
        Ref: VPCIdParameter
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0      
        - IpProtocol: tcp
          FromPort: 8800
          ToPort: 8800
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8000
          ToPort: 8000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0                                         
      SecurityGroupEgress:
        - IpProtocol: -1      
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Lifetime
          Value:
            Ref: TagLifetimeParameter
        - Key: Email
          Value:
            Ref: TagEmailParameter
        - Key: Team
          Value:
            Ref: TagTeamParameter

  CD4PE:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: EC2ImageIdParameter
      InstanceType:
        Ref: EC2InstanceTypeParameter
      KeyName:
        Ref: EC2KeyNameParameter
      Monitoring: false
      SecurityGroupIds:
        - !GetAtt CD4PESG.GroupId
      Tags:
        - Key: lifetime
          Value:
            Ref: TagLifetimeParameter
        - Key: Email
          Value:
            Ref: TagEmailParameter
        - Key: Team
          Value:
            Ref: TagTeamParameter
